[gd_scene load_steps=15 format=3 uid="uid://d0mr7qpf77y6w"]

[ext_resource type="Script" path="res://Menu/main_menu.gd" id="1_6hlw5"]
[ext_resource type="Texture2D" uid="uid://roc7wbghxqc0" path="res://Menu/trees.png" id="3_t6qs3"]
[ext_resource type="Texture2D" uid="uid://pbmacktu31ei" path="res://Menu/logo.png" id="7_d6ibx"]
[ext_resource type="Texture2D" uid="uid://bgc3mufqgxja" path="res://Assets/city 1/banner.png" id="7_ra0bk"]
[ext_resource type="Texture2D" uid="uid://dryjycmy7cnea" path="res://Menu/htp_normal.png" id="9_2q0na"]
[ext_resource type="Texture2D" uid="uid://b0ux1kc753pvs" path="res://Menu/play_normal.png" id="9_3qusg"]
[ext_resource type="Texture2D" uid="uid://bfspixki1ie0g" path="res://Menu/htp_hover.png" id="10_0vg1o"]
[ext_resource type="Texture2D" uid="uid://bnjnnjnedwsdv" path="res://Menu/play_hover.png" id="10_7ah47"]
[ext_resource type="Texture2D" uid="uid://dgcit577vycj5" path="res://Menu/quit_normal.png" id="11_8kyf0"]
[ext_resource type="Texture2D" uid="uid://duqiddhp8g6dv" path="res://Menu/close_button.png" id="11_hqiyu"]
[ext_resource type="Texture2D" uid="uid://bwh3ftc34g012" path="res://Menu/quit_hover.png" id="12_3n4j0"]

[sub_resource type="Animation" id="Animation_aw863"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/NextScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_0cj47"]
resource_name = "fade"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/NextScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3m8kc"]
_data = {
"RESET": SubResource("Animation_aw863"),
"fade": SubResource("Animation_0cj47")
}

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_6hlw5")
metadata/_edit_vertical_guides_ = [2252.0, 959.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
offset_top = 1088.0
offset_right = 1920.0
offset_bottom = 1416.0
scale = Vector2(1.19602, -3.48194)
mouse_filter = 2
texture = ExtResource("7_ra0bk")

[node name="Trees" type="TextureRect" parent="CanvasLayer"]
offset_left = -1.0
offset_top = -11.0
offset_right = 2034.0
offset_bottom = 546.0
scale = Vector2(0.942114, 0.942114)
texture = ExtResource("3_t6qs3")

[node name="PlayButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 791.0
offset_top = 818.0
offset_right = 1130.0
offset_bottom = 883.0
texture_normal = ExtResource("9_3qusg")
texture_hover = ExtResource("10_7ah47")

[node name="QuitButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 791.0
offset_top = 907.0
offset_right = 1130.0
offset_bottom = 972.0
texture_normal = ExtResource("11_8kyf0")
texture_hover = ExtResource("12_3n4j0")

[node name="Logo" type="TextureRect" parent="CanvasLayer"]
offset_left = 486.0
offset_top = 118.0
offset_right = 2486.0
offset_bottom = 2118.0
scale = Vector2(0.438636, 0.438636)
mouse_filter = 2
texture = ExtResource("7_d6ibx")

[node name="NextScene" type="ColorRect" parent="CanvasLayer"]
offset_right = 2299.0
offset_bottom = 1089.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="HTPButton" type="TextureButton" parent="CanvasLayer"]
offset_left = 1363.0
offset_top = 907.0
offset_right = 1863.0
offset_bottom = 972.0
texture_normal = ExtResource("9_2q0na")
texture_hover = ExtResource("10_0vg1o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3m8kc")
}

[node name="Popup" type="CanvasLayer" parent="."]
visible = false

[node name="PopupScreen" type="ColorRect" parent="Popup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -447.0
offset_right = 550.0
offset_bottom = 447.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.796078)

[node name="CloseButton" type="TextureButton" parent="Popup/PopupScreen"]
layout_mode = 0
offset_left = 1046.0
offset_top = 19.0
offset_right = 1086.0
offset_bottom = 59.0
texture_normal = ExtResource("11_hqiyu")

[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CanvasLayer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/HTPButton" to="." method="_on_htp_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Popup/PopupScreen/CloseButton" to="." method="_on_close_button_pressed"]
